--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,20 +10,18 @@ jobs:
         working-directory: .
 
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
-        with:
-          persist-credentials: false
-
-      - name: Cache  💾
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Install and Build
-        uses: actions/setup-node@v1
-      - run: yarn
-      - run: yarn build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install
+        run: yarn
+
+      - name: Build
+        run: yarn build
         env:
             CI: true
