--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splinetool/runtime": "^0.9.82",
     "ethers": "^5.6.9",
     "framer-motion": "^7.3.2",
+    "material-react-toastify": "^1.0.1",
     "next": "12.2.4",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
